syntax = "proto3";
package v1.provider;

/*
This is the API to use a Provider

*/

/*
Init the plugin instance
 */

message InitRequest {
}

message InitResponse {
}

/*
Provider API
 */


service Provider {
  rpc Init(InitRequest) returns (InitResponse);
}
